outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_23-14-52/evaluations/problem_eval9070679179487853137_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, using a penalty-based scoring system that reduces the influence of nodes with high future distances relative to their current distance, and introduces a temperature-based probabilistic selection to balance exploration and exploitation as the search progresses.}
                                                                                                                                                                                                                                                                                    ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, using a penalty-based scoring system that reduces the influence of nodes with high future distances relative to their current distance, and introduces a temperature-based probabilistic selection to balance exploration and exploitation as the search progresses.}
                                                                                                                                                                                                                                                                                    ^
SyntaxError: unmatched '}'
